2000-03-02  Akim Demaille  <akim@epita.fr>

	The whole family supports -V = --version.

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Report and support -V.
	* autoconf.sh: Likewise.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* autoheader.sh: Likewise.
	* autoscan.pl: Likewise.
	* ifnames.sh: Likewise.
	In addition, don't dump --help on invalid options.
	* doc/autoconf.texi: Adjusted.
	* doc/install.texi: Likewise.

2000-03-02  Lars J. Aas  <larsa@sim.no>

	* libm4.m4 (m4_noquote): New macro.

2000-03-02  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_PATH_X_DIRECT): Moved all the shell variable
	into the ac_ name space.
	Reported by Nicolas Joly.

2000-03-02  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Move some macros to a better place.

2000-03-02  Akim Demaille  <akim@epita.fr>

	Internal macros are named `_AC_'.

	* acgeneral.m4 (AC_CANONICAL_TARGET, AC_CANONICAL_BUILD,
	AC_CANONICAL_THING, AC_CHECK_TOOL_PREFIX, AC_CONFIG_UNIQUE):
	Prepend `_' to their names.
	* acspecific.m4 (AC_CHECK_HEADER_DIRENT, AC_CHECK_HEADERS_DIRENT,
	AC_PATH_X_XMKMF, AC_PATH_X_DIRECT): Prepend `_' to their names.
	* doc/autoconf.texi (Macro Names): Adjusted.

2000-03-02  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

2000-03-01  Akim Demaille  <akim@epita.fr>

	The empty regexp cannot be portably used in egrep's alternation.
	For instance with Digital Unix v5.0:
	   > echo "foo"  | egrep -e "^(|foo|bar)$"
	   > echo "|foo" | egrep -e "^(|foo|bar)$"
	   |foo
	   > echo "|bar" | egrep -e "^(|foo|bar)$"
	   > echo "bar"  | egrep -e "^(|foo|bar)$"
	   bar
	Reported by Nicolas Joly.

	* src/actest.m4 (AC_ENV_SAVE): s/(|EXTRA_|PRE_)/(EXTRA_|PRE_)?/.

2000-03-01  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Removed a few addresses, the map is...
	* THANKS: here.

2000-03-01  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* acspecific.m4 (AC_PATH_XTRA): On LynxOS 3.0.1/i386,