@@ -89,6 +89,7 @@ Ralf S. Engelschall	rse@engelschall.com
 Richard Stallman	rms@gnu.org
 Robert S. Maier		rsm@math.arizona.edu
 Roland McGrath		roland@gnu.org
+Russ Allbery		rra@stanford.edu
 Ryuji Abe		raeva@t3.rim.or.jp
 Scott Bambrough		scottb@corelcomputer.com
 Scott Stanton		stanton@scriptics.com
