@@ -17,7 +17,7 @@ print this help, then exit
 \fB\-V\fR, \fB\-\-version\fR
 print version number, then exit
 .TP
-\fB\-\-macrodir\fR=\fIDIR\fR
+\fB\-m\fR, \fB\-\-macrodir\fR=\fIDIR\fR
 directory storing data files
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
