@@ -1,3 +1,7 @@
+2000-03-02  Russ Allbery  <rra@stanford.edu>
+
+	* autoscan.pl (parse_args): Add support for -m <macrodir>.
+
 2000-03-02  Akim Demaille  <akim@epita.fr>
 
 	The whole family supports -V = --version.
